--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <title>Schedule.bond</title>
     <script defer="" src="/static/js/bundle.js"></script>
+    <base target="_parent">
     <style>
         :root {
             /* Color */
@@ -2839,12 +2840,12 @@
                         <div style="font-weight:bold; color: #bb5bfe; margin-bottom: 10px; font-size: 18px; ">
                             About
                         </div>
-                        <a style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
+                        <a target="_parent" style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
                             href="https://docs.schedule.bond">
                             Team
                         </a>
-                        <a style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
-                            href="https://schedule.bond/privacy-policy.pdf">
+                        <a target="_parent" style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
+                            href="https://docs.schedule.bond/Privacy-Policy">
                             Privacy Policy
                         </a>
                     </div>
@@ -2852,15 +2853,15 @@
                         <div style="font-weight:bold; color: #bb5bfe; margin-bottom: 10px; font-size: 18px; ">
                             Support
                         </div>
-                        <a style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
+                        <a target="_parent" style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
                             href="https://docs.schedule.bond/2ed00fc8-12de-4f88-908b-48b4da87a5d6">
                             Getting Started
                         </a>
-                        <a style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
+                        <a target="_parent" style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
                             href="https://docs.schedule.bond/5c5869f8-a064-473d-987e-4282bc5d51c8">
                             FAQ
                         </a>
-                        <a style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
+                        <a target="_parent" style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
                             href="#">
                             Contact Us
                         </a>
@@ -2869,11 +2870,11 @@
                         <div style="font-weight:bold; color: #bb5bfe; margin-bottom: 10px; font-size: 18px; ">
                             Socials
                         </div>
-                        <a style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
+                        <a target="_parent" style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
                             href="https://twitter.com/ScheduleBond">
                             Twitter
                         </a>
-                        <a style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
+                        <a target="_parent" style="color: #000; margin-bottom: 5px; font-size: 12px; text-decoration: none;"
                             href="https://discord.gg/4jtExX5dNJ">
                             Discord
                         </a>
